...
    @State private var viewModel = PublicListViewModel()
    var path: Binding<NavigationPath>

    var body: some View {
        VStack {
            HStack {
                Button("Back") {
                    path.wrappedValue.removeLast()
                }
                Text("Public Chats")
            }
            .padding(.bottom, 4)

...
